# blackbox

./: .env.example  .gitignore  README.md  blackbox.service  pyproject.toml
src/blackbox/: __init__.py  cli.py  config.py  exceptions.py  notifications.py
src/blackbox/clients/: __init__.py  base.py  earnings.py  github_advisory.py  hibp.py  noaa.py  nvd.py  rss.py  sec.py
src/blackbox/db/: __init__.py  models.py  repositories.py  session.py
src/blackbox/detectors/: __init__.py  anomaly.py  base.py  broker.py  cascade.py  earnings_proximity.py  rhyme.py  silence.py
src/blackbox/digest/: __init__.py  generator.py
src/blackbox/models/: __init__.py  activity.py  alert.py  entity.py
src/blackbox/scheduler/: __init__.py  jobs.py  service.py
src/blackbox/sync/: __init__.py  earnings_sync.py  github_sync.py  hibp_sync.py  noaa_sync.py  nvd_sync.py  rss_sync.py  sec_sync.py
src/blackbox/utils/: __init__.py  datetime.py
tests/: __init__.py  conftest.py  test_clients_earnings.py  test_db.py  test_digest.py  test_hibp.py  test_hibp_sync.py  test_models.py  test_rss.py  test_scheduler.py  test_silence.py
